gcc-14.2.0/gcc/testsuite/gdc.test/fail_compilation/class1.d
version https://git-lfs.github.com/spec/v1
oid sha256:32fbba8990e21046c6d9bb5f23d64ff390f6bf3ae1c3ab8243cc917698024280
size 210
